First_Step/data/44/155/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                               ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                  ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                   ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                     ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                      ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                        ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                         ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                          ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                           ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                             ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                              ^
Executable.java:9: error: illegal start of expression
        Scores sc = new Scores([10,11,12,9,40,18]);
                                                ^
Executable.java:9: error: ';' expected
        Scores sc = new Scores([10,11,12,9,40,18]);
                                                 ^
14 errors
Not compiled
--|>
Grade :=>>0.00000
